--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
