Put player actions in modal

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,22 @@
   align-items: center;
   background-color: green;
 }
+
+.modal-actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  box-sizing: border-box;
+  width: 20rem;
+  height: 10rem;
+}
+
+.actions-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
